PIG BARCLAMP - added language translation for JAVA_HOME.

--- a/crowbar.yml
+++ b/crowbar.yml
@@ -32,6 +32,7 @@ locale_additions:
       pig: 
         edit_attributes: 
           attributes: Attributes
+          java_home: Java Home
           log4jconf: Log4j Configuration File
           brief: Brief Logging Mode
           cluster: Hadoop Jobtracker Cluster Name 
